--- a/sec_ana.tex
+++ b/sec_ana.tex
@@ -11,7 +11,7 @@ The primary vertex positions are reconstructed from signals measured by the Sili
 
 Charged-particle tracks are reconstructed using the combined information of the ITS and TPC in a uniform magnetic field of 0.5 T along the beam direction by the solenoid. The ITS is a silicon tracker with six layers of silicon sensors, the SPD consists of the two innermost layers, the next two layers are the SDD (Silicon Drift Detector) and the outermost layers are the SSD (Silicon Strip Detector). The ITS and TPC are covering the entire azimuth range up to $|\eta|<1.4$ and 0.9, respectively, for the detection of charged particles emitted within 8 cm from the nominal vertex position $z_\mathrm{vtx}=0$ along the beam direction. Charged particle tracking is performed with the ITS and TPC capable of reconstructing tracks down to transverse momentum ($\pt$) of 0.15 GeV/$c$ with an efficiency of about 65\% and the efficiency reaches 80\% for intermediate $\pt$, 1--5~GeV/$c$. The $\pt$ resolution is about 1\% (1\%) for primary charged particles with $\pt<$~1~GeV/$c$, linearly increasing to 6\% (10\%) at $\pt\sim$ 50~GeV/$c$ in pp (p--Pb) collisions~\cite{ALICE:2018vuu}. 
 
-The charged particle selection criteria are optimized to ensure a uniform efficiency over the entire TPC volume to mitigate the effects of small areas where some ITS layers are inactive in both collision systems. The selection consists of two classes of tracks. Those in the first class must have at least one hit in SPD. The tracks of the second class do not have any hits related to the SPD, and their origins are rather constrained to the primary vertex~\cite{ALICE:2012eyl}. 
+The charged particle selection criteria are optimized to ensure a uniform efficiency over the sensitive TPC volume to mitigate the effects of small areas where some ITS layers are inactive in both collision systems. The selection consists of two classes of tracks. Those in the first class must have at least one hit in SPD. The tracks of the second class do not have any hits related to the SPD, and their origins are rather constrained to the primary vertex~\cite{ALICE:2012eyl}. 
 
 \section{Analysis procedure}
 \label{sec:ana}
@@ -28,9 +28,21 @@ This is investigated in the large $\Delta\eta$ range that is used in this analys
 %where the trigger and associated particles are defined for different transverse momentum ranges, $1<p_\mathrm{T,trig}<2$ GeV/$c$ and $1<p_\mathrm{T,assoc}<4$ GeV/$c$.
 The $N_\mathrm{trig}$ and $N_\mathrm{pair}$ are the numbers of trigger particles and trigger-associated particle pairs, respectively. $S(\Delta\eta, \Delta\varphi)$ corresponds to the average number of pairs in the same event and $B(\Delta\eta, \Delta\varphi)$ to the number of pairs in mixed events. 
 $B (0,0)$ represents the normalization of $B(\Delta\eta, \Delta\varphi)$, and by dividing $S(\Delta\eta, \Delta\varphi)$ with $B(\Delta\eta, \Delta\varphi)/B (0,0)$ the acceptance effects are corrected for. The track reconstruction efficiency is corrected for on the right-hand side of Eq.~\ref{eq:corrfunction} as functions of $p_\mathrm{T}$ and $\eta$. 
-In the previous study~\cite{ALICE:2021nir}, the tracking efficiency was calculated with a detector simulation with the PYTHIA 8 event generator and the GEANT3 transport code~\cite{Brun:1994aa}. The tracking efficiency is determined by re-weighting the primary particle composition based on a data driven method~\cite{ALICE:2018hza,ALICE:2018vuu}. Therefore, this method improves the measurements on the jet-yield extraction and has no impact on the flow extraction.
-For each multiplicity percentile, the pairs in mixed events are required to have primary vertices within the same 2 cm wide $z_{vtx}$ interval~\cite{KOPYLOV1974472:evtmixing,Adam:2016tsv}. 
-The correlation functions are averaged over the vertex bins which results in the final per-trigger yield.
+In the previous study~\cite{ALICE:2021nir}, the tracking efficiency was calculated with a detector simulation with the PYTHIA 8 event generator and the GEANT3 transport code~\cite{Brun:1994aa}. The tracking efficiency is determined by re-weighting the primary particle composition based on a data driven method~\cite{ALICE:2018hza,ALICE:2018vuu}. Therefore, this method improves the jet-yield extraction and has no impact on the flow extraction.
+For each multiplicity percentile, the pairs in mixed events are required to have primary vertices within the same 2 cm wide $z_{vtx}$ interval and the correlation functions are averaged over the vertex bins which results in the final per-trigger yield~\cite{KOPYLOV1974472:evtmixing,Adam:2016tsv}.
+
+\begin{figure}[h!]
+		\includegraphics[width=0.5 \textwidth]{figures/CorrForAN_C_0_0_0_11} 
+		\includegraphics[width=0.5 \textwidth]{figures/CorrForAN_C_0_0_4_11} 
+  		\includegraphics[width=0.5 \textwidth]{figures/corr_1_0_2_pPb}
+		\includegraphics[width=0.5 \textwidth]{figures/corr_1_6_2_pPb}
+\caption{Two-particle correlation functions as functions of $\Delta\eta$ and $\Delta\varphi$ for HM(0--0.1\%, left) and LM(60--100\%, right) events in $\sqrt{s}=13$ TeV pp (top) and $\sqrt{s_{\mathrm{NN}}}=5.02$ TeV p--Pb (bottom) collisions. The $z$-axis. The intervals of $\pttrig$ and $\ptassoc$ are 1~$<\it{p}_{\rm{T}}<$~2~GeV/$c$ in all cases.}
+\label{fig:doubleridge}
+\end{figure}
+
+Two-dimensional correlation distributions in pp collisions at $\sqrt{s}=13$ TeV are shown in Fig.~\ref{fig:doubleridge} for the high-multiplicity (0--0.1\%, left) and low-multiplicity (60--90\%, right). 
+The $z$-axis for the correlation yield is properly scaled in order to zoom in the larger $\Delta\eta$ region. As a result, the jet peaks are sheared off in both figures. The flow modulation structure is clearly observed in the HM class while it is not seen in the LM-template. The away-side regions are populated mostly by back-to-back jet correlations but they are reduced and compatible to the one in near side in $\Delta\eta > 1.6$.
+
 The per-trigger yield is extracted for various multiplicity percentiles and $\pt$ intervals at large $\Delta\eta$, at $1.6<|\Delta\eta|<1.8$ to remove the near-side non-flow contributions. The per-trigger yield as a function of $\Delta\varphi$ is expressed as
 \begin{eqnarray}
 Y(\Delta\varphi) = \frac{1}{N_{\rm{trig}}} \frac{ \rm{d}\it{}N_{\rm{pair}} }{ \rm{d}\Delta\varphi } = \int_{1.6<|\Delta \eta|<1.8} \left( \frac{1}{\it{N}_{\rm{trig}}} \frac{ \rm{d}\it{}^{2} N_{\rm{pair}} }{ \rm{d}\Delta\eta \rm{d}\Delta\varphi} \right) \dfrac{1}{\delta_{\Delta\eta}} \rm{d}\Delta \eta \quad ,
@@ -108,6 +120,16 @@ The away-side jet-like yield in data is measured from the LM-template fit method
 
 Figure~\ref{fig:Ymult} presents the $Y^{\mathrm{near}}_{\rm{frag}}$ and $Y^{\mathrm{away}}_{\rm{frag}}$, for both ALICE data and PYTHIA 8 Tune 4C as a function of multiplicity percentile in pp collisions at $\sqrt{s}=13$ TeV. The transverse momentum range for trigger particles is $1<p_\mathrm{T,trig}<2$ GeV/c and for associated particles $1<p_\mathrm{T,assoc}<4$ GeV/c. ALICE data points are shown as circle and square markers, whereas PYTHIA is shown as lines. The near-side yields are shown in black and the away-side yields in blue.
 The near- to away-side ratio for ALICE and PYTHIA data is shown in the bottom panel. While PYTHIA overestimates ALICE data for both $Y^{\mathrm{near}}_{\rm{frag}}$ and $Y^{\mathrm{away}}_{\rm{frag}}$, the ratio in PYTHIA is consistent with the ALICE data in the multiplicity percentiles studied. This ratio can be explained by the pair acceptance effect caused by the limited ALICE $\eta$ acceptance~\cite{PHENIX:2006gto}, which implies that the enhanced jet yields in away-side in HM events with respect to LM events are well quantified by the LM-template method.
+
+\begin{figure}[h!]
+		\includegraphics[width=0.5 \textwidth]{figures/CorrForAN_C_SUB_0_0_0_11.jpg}
+  		\includegraphics[width=0.5 \textwidth]{figures/corr_sub_fit_1_0_2_pPb}
+\caption{The subtracted one as (0--0.1)\%-$F$(60--100\%) is shown on the right. The subtracted one as (0--5)\%-$F$(60--100\%) is shown on the right. Note that the near-side jet peaks exceed the chosen range of the $z$-axis. The intervals of $\pttrig$ and $\ptassoc$ are 1~$<\it{p}_{\rm{T}}<$~2~GeV/$c$ in all cases.}
+\label{fig:doubleridge}
+\end{figure}
+
+The subtracted one as (0--5)\%-$F$(60--100\%) on the right. Similarly, the ones in p--Pb collisions at $\sqrt{s_{\mathrm{NN}}}=5.02$ TeV are shown in Fig.~\ref{fig:doubleridgepPb}. The $F$ values can be found in Tables~\ref{tab:Fpp} and \ref{tab:Fpb}, which come from the LM-template fit in a given multiplicity percentile as described in Sec.~\ref{sec:ana}. 
+
 
 \subsection{Event-scale dependence}
 As a continuation of the extraction of the flow coefficients with the LM-template fit method, different event scale selections are investigated. By selecting events that includes a hard jet or a high-$\pt$ leading particle within the mid-rapidity region, it is possible to study the impact parameter dependence of flow coefficients in pp collisions~\cite{Sjostrand:1986ep,Frankfurt:2010ea}. This event scale is set by requiring a minimum $\pt$ of the leading track ($\ptlead$) or the reconstructed jet ($\ptjet$) at midrapidity. The leading particle track requires to be within $|\eta|<0.9$ and $0<\phi<2\pi$, and the jets are reconstructed with the anti-$k_{\rm{T}}$ algorithm~\cite{Cacciari:2008gp,Cacciari:2011ma}, with $R=0.4$ for only charged particles. In this analysis the $\pt$ scheme is used as the recombination scheme. As the leading particle tracks, the jets are selected in the full azimuthal angle ($0<\phi<2\pi$) but in an $\eta$-range of $|\eta_\mathrm{jet}|<0.4$. The $\pt$ of jets $\ptjet$ is corrected for the underlying event density that is measured using the $k_{\rm{T}}$ algorithm with $R=$~0.2~\cite{Acharya:2018eat}.
