--- a/sec_ana.tex
+++ b/sec_ana.tex
@@ -73,18 +73,18 @@ This method assumes that $Y_{\rm{LM}}$ does not contain a peak in the near side 
 \begin{figure}[h!]
 	\centering
 	\hspace{-3em}\includegraphics[width=0.6\textwidth]{figures/Fig1_FlowExt.pdf} 
-	\caption{The template fit results with the low-multiplicity templates. The black markers show the signal for the 0--0.1\% multiplicity percentile and its fit as a blue band. The red squares correspond to the low-multiplicity signal. The orange and green curves correspond to the extracted $v_{2,2}$ and $v_{3,3}$ signals, respectively. The $\chi^{2}$ divided by the number of degrees of freedom is 0.894}
+	\caption{The template fit results with the low-multiplicity templates. The black markers show the signal for the 0--0.1\% multiplicity percentile and its fit as a blue band. The red squares correspond to the low-multiplicity signal. The orange and green curves correspond to the extracted $v_{2,2}$ and $v_{3,3}$ signals, respectively. The fit to the signal is shown as a blue band, and the signal-to-fit ratio is shown in the bottom panel. The $\chi^{2}$ divided by the number of degrees of freedom is 0.894}
 	\label{fig:flowext}
 \end{figure}
 
-Figure~\ref{fig:flowext} shows the template fit results for the 0--0.1\% multiplicity percentile in pp collisions at $\sqrt{s}$ = 13 TeV. The per-trigger yield for low multiplicity, $Y_{\rm{LM}}(\Delta\varphi)$, is represented by red squares. The values of $v_{2,2}$ and $v_{3,3}$ extracted from the fit are shown in orange and green, respectively. Values of the extracted scale factor $F$ in different multiplicity percentiles and systems are summarized in Tab.~\ref{tab:FpppPb}. In pp collisions, the value of $F$ is observed to slightly increase as the event multiplicity increases, with the highest multiplicity bin having a value approximately 25\% larger than the 20--60\% bin. A similar trend is observed for p--Pb collisions, though with a weaker dependence on multiplicity. Comparing the corresponding centrality classes of pp and p--Pb collisions, the value of $F$ in p--Pb collisions is found to be smaller and closer to unity.
+Figure~\ref{fig:flowext} shows the template fit results for the 0--0.1\% multiplicity percentile in pp collisions at $\sqrt{s}$ = 13 TeV. The per-trigger yield for low multiplicity, $Y_{\rm{LM}}(\Delta\varphi)$, is represented by red squares. The values of $v_{2,2}$ and $v_{3,3}$ extracted from the fit are shown in orange and green, respectively. Values of the extracted scale factor $F$ in different multiplicity percentiles and systems are summarized in Tab.~\ref{tab:FpppPb}. In pp collisions, the value of $F$ is observed to slightly increase as the event multiplicity increases, with the highest multiplicity bin having a value approximately 25\% larger than the 20--60\% bin. A similar trend is observed for p--Pb collisions, though with a weaker dependence on multiplicity percentile. Comparing a similar centrality percentile of pp and p--Pb collisions, the value of $F$ in p--Pb collisions is found to be smaller and closer to unity.
 %Those are larger at high multiplicity in pp collisions, while they are closer to unity at low multiplicity in p--Pb collisions.
-This suggests that the jet fragmentation yield on the away-side increases with multiplicity, which is more pronounced in pp collisions. The difference between the two systems is likely explained by the true geometry driven centrality in p--Pb collisions, as opposed to the jet dominated bias in pp collisions.
- In previous ALICE results~\cite{ALICE:2012eyl,ALICE:2013snk}, it was assumed that the jet contribution is unchanged as a function of multiplicity (i.e. $F$ was assumed to be 1), which may lead to an underestimation of non-flow contamination in the final measurements of anisotropic flow. 
- The fit to the signal, Eq.~\ref{eq:narray}, is shown as a blue band, and the signal-to-fit ratio is shown in the bottom panel. 
+This suggests that the jet fragmentation yield on the away-side increases with multiplicity, which is more pronounced in pp collisions. The difference between the two systems is likely to be explained by the true geometry driven centrality in p--Pb collisions, as opposed to the jet dominated bias in pp collisions.
+The previous analyses published by ALICE in Refs. ~\cite{ALICE:2012eyl,ALICE:2013snk} assumed that the jet contribution remains constant as a function of multiplicity (i.e. $F$ was assumed to be 1). However, this assumption may lead to an underestimation of non-flow contamination in the final measurements of anisotropic flow.
+%The fit to the signal, Eq.~\ref{eq:narray}, is shown as a blue band, and the signal-to-fit ratio is shown in the bottom panel. 
 %let's add chiq value of the fit
 \begin{table}[h!]
-\caption{The scale factor $F$ for various multiplicity percentiles in pp (top) and p--Pb (bottom) collisions.}
+\caption{The scale factor $F$ for various multiplicity percentiles in pp (top) and p--Pb (bottom) collisions. Note that there are only statistical errors from the default event and track selections.}
 %\begin{tabular}{|c|c|c|c|c|c}
 %\hline
 %V0M (pp)& 0--0.1\% & 1--5\% & 5--20\% & 20--60\% \\
@@ -110,7 +110,7 @@ $F$& 1.135$\pm$0.026 & 1.140$\pm$0.026 & 1.152$\pm$0.021 & 1.145$\pm$0.017 &1.09
 \end{table}
 
 In the following, the near and away-side jet fragmentation yields are calculated to verify the template fit method by comparing the jet fragmentation yields to the PYTHIA model.
-The near-side jet-like yields are extracted from the near-side $\Delta\eta$ correlations, defined in $|\Delta\varphi|<$~1.3 as
+The near-side jet-like yields were extracted from the near-side $\Delta\eta$ correlations, defined in $|\Delta\varphi|<$~1.3 as
 \begin{eqnarray}
 Y^\mathrm{near}_{\rm{frag}} = \int_{|\Delta \eta|<1.3} \left( \frac{1}{\it{N}_{\rm{trig}}} \frac{ \rm{d}\it{}N_{\rm{pair}} }{ \rm{d}\Delta\eta } \right) \rm{d} \Delta\eta.
 \label{eq:Ynear}
@@ -120,7 +120,7 @@ Y^\mathrm{near}_{\rm{frag}} = \int_{|\Delta \eta|<1.3} \left( \frac{1}{\it{N}_{\
 %As can be seen in Eq.~\ref{eq:Ynear}, the yield of the jet fragmentation is calculated by integrating the $\Delta\eta$ correlation over $|\Delta\eta|<1.3$ after applying the ZYAM procedure~\cite{Ajitanand:2005jj} because the flow coefficients have a weak dependence on $\eta$~\cite{ATLAS:2011ah,PHENIX:2018hho,ALICE:2016tlx}. The ZYAM procedure is applied by finding the minimum value of $\Delta\eta$ correlations within $|\Delta\eta|<1.3$, which results in pointing the minimum position to be $|\Delta\varphi|=1.3$.
 As flow has a weak $\eta$ dependence~\cite{ATLAS:2011ah,PHENIX:2018hho,ALICE:2016tlx}, the jet fragmentation yield can be calculated after the ZYAM background subtraction~\cite{Ajitanand:2005jj} by integrating the $\Delta\eta$ correlation over $|\Delta\eta|<1.3$, as written in Eq.~\ref{eq:Ynear}. The ZYAM procedure finds the minimum value of $\Delta\eta$ correlations within this range, which due to the shape of the correlation function is at $|\Delta\varphi|=1.3$.
 
-As can be seen in Eq.~\ref{eq:Ynear}, the yield of the jet fragmentation is calculated by integrating the $\Delta\eta$ correlation over $|\Delta\eta|<1.3$ after applying the ZYAM procedure~\cite{Ajitanand:2005jj} because the flow coefficients have a weak dependence on $\eta$~\cite{ATLAS:2011ah,PHENIX:2018hho,ALICE:2016tlx}. The ZYAM procedure is applied by finding the minimum value of $\Delta\eta$ correlations within $|\Delta\eta|<1.3$, which results in pointing the minimum position to be $|\Delta\varphi|=1.3$.
+As can be seen in Eq.~\ref{eq:Ynear}, the per-trigger yield of away-side jet fragments is calculated by integrating the $\Delta\eta$ correlation over $|\Delta\eta|<1.3$ after applying the ZYAM procedure~\cite{Ajitanand:2005jj} because the flow coefficients have a weak dependence on $\eta$~\cite{ATLAS:2011ah,PHENIX:2018hho,ALICE:2016tlx}. The ZYAM procedure is applied by finding the minimum value of $\Delta\eta$ correlations within $|\Delta\eta|<1.3$, which results in pointing the minimum position to be $|\Delta\varphi|=1.3$.
 
 The away-side jet-like yield in data is calculated from the low-multiplicity template fit method as $Y^{\rm{away, HM}}_{\mathrm{frag}} = Y^{\rm{away, LM}}_{\mathrm{frag}} \times F$, where $F$ is the parameter from Eq.~\ref{eq:narray}. The $Y^{\rm{away, LM}}_{\mathrm{frag}}$ is directly obtained by integrating the away-side low-multiplicity $\Delta\varphi$ correlation function in the low-multiplicity sample over $\pi/2 < \Delta\varphi < 3\pi/2$.
 In PYTHIA, it is possible to directly measure  $Y^{\rm{away}}$ from the $\Delta\varphi$ correlation functions since the model does not include any flow contributions.
@@ -132,7 +132,7 @@ In PYTHIA, it is possible to directly measure  $Y^{\rm{away}}$ from the $\Delta\
 	\label{fig:Ymult}
 \end{figure}
 
-Figure~\ref{fig:Ymult} presents the $Y^{\mathrm{near}}_{\rm{frag}}$ and $Y^{\mathrm{away}}_{\rm{frag}}$, for both ALICE data and PYTHIA 8 Tune 4C as a function of multiplicity percentile in pp collisions at $\sqrt{s}=13$ TeV. The transverse momentum range for trigger particles is $1<p_\mathrm{T,trig}<2$ GeV/c and for associated particles $1<p_\mathrm{T,assoc}<4$ GeV/c. ALICE data points are shown as circle and square markers, whereas PYTHIA is shown as lines. The near-side yields are shown in black, and the away-side yields in blue.
+Figure~\ref{fig:Ymult} presents the $Y^{\mathrm{near}}_{\rm{frag}}$ and $Y^{\mathrm{away}}_{\rm{frag}}$, for both ALICE data and PYTHIA 8 Tune 4C, as a function of multiplicity percentile in pp collisions at $\sqrt{s}=13$ TeV. The transverse momentum range for trigger particles is $1<p_\mathrm{T,trig}<2$ GeV/c and for associated particles $1<p_\mathrm{T,assoc}<4$ GeV/c. ALICE data points are shown as circle and square markers, whereas PYTHIA is shown as lines. The near-side yields are shown in black, and the away-side yields in blue.
 The near- to away-side ratio for ALICE and PYTHIA data is shown in the bottom panel. While PYTHIA overestimates ALICE data for both $Y^{\mathrm{near}}_{\rm{frag}}$ and $Y^{\mathrm{away}}_{\rm{frag}}$, the ratio to PYTHIA is consistent with the ALICE data in the multiplicity percentiles studied. This ratio can be explained by the pair acceptance effect caused by the limited ALICE $\eta$ acceptance~\cite{PHENIX:2006gto}, which implies that the enhanced jet fragmentation yields in away-side in high-multiplicity events with respect to low-multiplicity events~\cite{ALICE:2013tla,ALICE:2014mas} are taken into account by the low-multiplicity template method. In summary, the difference between the near-side and away-side jet fragmentation yields in PYTHIA is solely caused by the jet acceptance effects of the two-particle correlation functions. This ratio in data where the away-side jet fragmentation yields are measured with the low-multiplicity template agrees well with PYTHIA as well as the calculations in Ref.~\cite{PHENIX:2006gto}.
 %It is worthwhile to noting that, even though this method measures the jet yields on the away side from the fit, these yields were not reported in previous measurements~\cite{}.
 
